<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.information.InformationFragment"
    android:background="@color/teal_primier">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ransum_unggas"
        android:textColor="@color/white_smoke"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        android:background="@drawable/half_rounded_light"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:text="@string/informasi"
            android:textColor="@color/dark_late_gray"
            android:textSize="16sp"
            android:gravity="center" />

        <TableLayout
            android:id="@+id/tabla_cuerpo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:stretchColumns="0,1"
            android:gravity="center|top">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:background="@drawable/cell_shape"
                    android:text="@string/pakan"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_late_gray"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:background="@drawable/cell_shape"
                    android:text="@string/pk"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_late_gray"
                    android:gravity="center"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/cell_shape"
                    android:text="@string/dedak"
                    android:textSize="14sp"
                    android:textColor="@color/dark_late_gray"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/cell_shape"
                    android:text="@string/_11_9"
                    android:textSize="14sp"
                    android:textColor="@color/dark_late_gray"
                    android:gravity="center"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/cell_shape"
                    android:text="@string/kedelai"
                    android:textSize="14sp"
                    android:textColor="@color/dark_late_gray"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/cell_shape"
                    android:text="@string/_41_3"
                    android:textSize="14sp"
                    android:textColor="@color/dark_late_gray"
                    android:gravity="center"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/cell_shape"
                    android:text="@string/kelapa"
                    android:textSize="14sp"
                    android:textColor="@color/dark_late_gray"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/cell_shape"
                    android:text="@string/_21"
                    android:textSize="14sp"
                    android:textColor="@color/dark_late_gray"
                    android:gravity="center"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/cell_shape"
                    android:text="@string/jagung"
                    android:textSize="14sp"
                    android:textColor="@color/dark_late_gray"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/cell_shape"
                    android:text="@string/_9_7"
                    android:textSize="14sp"
                    android:textColor="@color/dark_late_gray"
                    android:gravity="center"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/cell_shape"
                    android:text="@string/tahu"
                    android:textSize="14sp"
                    android:textColor="@color/dark_late_gray"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/cell_shape"
                    android:text="@string/_43"
                    android:textSize="14sp"
                    android:textColor="@color/dark_late_gray"
                    android:gravity="center"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/cell_shape"
                    android:text="@string/sagu"
                    android:textSize="14sp"
                    android:textColor="@color/dark_late_gray"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/cell_shape"
                    android:text="@string/_2_3"
                    android:textSize="14sp"
                    android:textColor="@color/dark_late_gray"
                    android:gravity="center"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/cell_shape"
                    android:text="@string/kacang"
                    android:textSize="14sp"
                    android:textColor="@color/dark_late_gray"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/cell_shape"
                    android:text="@string/_25"
                    android:textSize="14sp"
                    android:textColor="@color/dark_late_gray"
                    android:gravity="center"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/source"
            android:textSize="11sp"
            android:textColor="@color/dark_late_gray"
            android:gravity="center"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>