<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.about.AboutFragment"
    android:background="@color/teal_primier">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ransum_unggas"
        android:textColor="@color/white_smoke"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        android:background="@drawable/half_rounded_light"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/img_about_saya"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="16sp"
            android:textColor="@color/dark_late_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/npm"
            android:textSize="16sp"
            android:textColor="@color/dark_late_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email"
            android:textSize="12sp"
            android:textColor="@color/dark_late_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/about_app"
            android:textSize="14sp"
            android:textColor="@color/dark_late_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_margin="16dp"
            android:layout_marginTop="30dp"
            android:text="@string/isi_about"
            android:textSize="12sp"
            android:textColor="@color/dark_late_gray" />





    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>