<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_primier">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ransum_unggas"
        android:textColor="@color/white_smoke"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        android:background="@drawable/half_rounded_light"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/chiken_choice"
            android:textColor="@color/dark_late_gray"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvLayingHens"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/teal_primier"
                app:cardCornerRadius="16dp"
                app:cardElevation="5dp"
                app:strokeWidth="3dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/laying_hens"
                    android:padding="10dp"
                    android:src="@drawable/ayampetelur1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/laying_hens"
                    android:textColor="@color/white_smoke"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvBroiler"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/teal_primier"
                app:cardCornerRadius="16dp"
                app:cardElevation="5dp"
                app:strokeWidth="3dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/laying_hens"
                    android:padding="10dp"
                    android:src="@drawable/ayampotong1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/broiler"
                    android:textColor="@color/white_smoke"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>