<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_primier"
    tools:context=".ui.layinghens.CriteriaLayingHensActivity">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ransum_unggas"
        android:textColor="@color/white_smoke"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        android:background="@drawable/half_rounded_light"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/babyBroilerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="5dp"
            app:strokeWidth="3dp"
            app:cardBackgroundColor="@color/teal_primier">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/broiler"
                    android:padding="5dp"
                    android:src="@drawable/bayi" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:ellipsize="end"
                    android:lineSpacingMultiplier="1.2"
                    android:maxLines="1"
                    android:text="@string/baby_broilers"
                    android:textColor="@color/white_smoke"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/adultBroilerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="5dp"
            app:strokeWidth="3dp"
            app:cardBackgroundColor="@color/teal_primier">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/broiler"
                    android:padding="8dp"
                    android:src="@drawable/ayampotong1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:ellipsize="end"
                    android:lineSpacingMultiplier="1.2"
                    android:maxLines="1"
                    android:text="@string/adult_broilers"
                    android:textColor="@color/white_smoke"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>